fix comingsoon qr history align

--- a/frontend/src/app/container/afternoon-tea/coming-soon/coming-soon.component.scss
+++ b/frontend/src/app/container/afternoon-tea/coming-soon/coming-soon.component.scss
@@ -15,6 +15,7 @@
     font-weight: bold;
     padding: 0 20px;
     box-sizing: border-box;
+    line-height: 1.2;
   }
   .subtitle, .message {
     color: #aaaaaa;
