--- a/frontend/src/app/container/afternoon-tea/history/history.component.scss
+++ b/frontend/src/app/container/afternoon-tea/history/history.component.scss
@@ -48,7 +48,8 @@
   .container {
     .grid-content {
       max-width: 350px;
-      margin: 0 10px;
+      padding: 0 10px;
+      margin: 0 auto;
       box-sizing: border-box;
     }
   }
